# sujoly-inspector

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  PRESENTATION_SPEECH.md  docker-compose.yml  seed.py  start.sh
apps/agent/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  buf.gen.yaml  langgraph.json  package.json  pyproject.toml  test_memory.py
apps/agent/docs/: API.md
apps/agent/src/agent/: __init__.py  graph.py  ingest.py  main.py  server.py  server_auth.py
apps/agent/src/agent/config/: settings.py
apps/agent/src/agent/core/: __init__.py  agent.py
apps/agent/src/agent/graphs/: __init__.py  workflow.py
apps/agent/src/agent/infrastructure/: database.py  thread_ownership.py
apps/agent/src/agent/integrations/: backend.py
apps/agent/src/agent/loaders/: __init__.py  pdf.py  text.py
apps/agent/src/agent/memory/: __init__.py  mem0_client.py  store.py
apps/agent/src/agent/prompts/: retrieval.py  system.py
apps/agent/src/agent/retrieval/: __init__.py  hybrid.py  reranker.py
apps/agent/src/agent/routes/: admin.py  agent.py  health.py
apps/agent/src/agent/services/: admin.py
apps/agent/src/agent/tools/: __init__.py  api.py  registry.py  retrieval.py
apps/agent/src/agent/utils/: __init__.py  logging.py  observability.py  rate_limit.py
apps/agent/tests/: conftest.py  test_api.py  test_prompt.py  test_server_auth.py  test_tools.py  test_workflow.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_filterable_columns_and_search.py  0003_users.py  0004_risk_assessments.py  0005_documents.py  0006_inspections.py  0008_candidates.py  0009_embeddings.py  0010_no_postgis_clean.py
apps/api/src/api/: __init__.py  celery_app.py  main.py
apps/api/src/api/config/: settings.py
apps/api/src/api/dependencies/: __init__.py  auth.py
apps/api/src/api/infrastructure/: __init__.py  database.py
apps/api/src/api/models/: __init__.py  candidate.py  document.py  embedding.py  inspection.py  provenance.py  risk_assessment.py  structure.py  user.py
apps/api/src/api/routes/: __init__.py  auth.py  candidates.py  copilot.py  documents.py  exports.py  health.py  ingestion.py  inspections.py  minio.py  ocr.py  provenance.py  risk.py  search.py  stac.py  structures.py
apps/api/src/api/schemas/: __init__.py  auth.py  candidates.py  copilot.py  documents.py  exports.py  inspections.py  risk.py  search.py  structures.py
apps/api/src/api/services/: __init__.py  auth_service.py  copilot_service.py  (+15 more)
apps/api/templates/: inspection_report_en.html  inspection_report_kk.html  inspection_report_ru.html
apps/api/tests/: conftest.py  test_auth.py  test_candidates.py  test_copilot.py  test_discovery.py  test_documents.py  test_embedding.py  test_exports.py  test_health.py  test_ingestion.py  test_inspections.py  test_matching.py  test_minio.py  test_ocr.py  test_provenance.py  test_risk_api.py  test_risk_engine.py  test_schema.py  test_search.py  test_stac.py  test_structures.py  test_tipg.py
(+271 files in other folders)
