[project]
name = "api"
version = "0.1.0"
description = "SuJoly Inspector — Backend API for hydraulic structures catalog"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.20.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "celery>=5.6.0",
    "redis>=8.0.0",
    "minio>=7.2.0",
    "pgvector>=0.4.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.2.1",
    "psycopg[binary,pool]>=3.2.0",
    "xlrd>=2.0.2",
    "python-json-logger>=2.0.7",
    "pyjwt>=2.13.0",
    "weasyprint>=69.0",
    "jinja2>=3.1.6",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that require a running PostgreSQL/MinIO Docker stack",
]

[project.scripts]
api-server = "api.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
